<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"></item>

        <item
            android:id="@+id/nav_add_card"
            android:icon="@drawable/ic_cpf"
            android:title="@string/add_card"></item>

        <item
            android:id="@+id/nav_tab_prices"
            android:icon="@drawable/ic_money"
            android:title="@string/tab_prices"></item>

    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login"
                    android:title="@string/login"></item>

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_person"
                    android:title="@string/profile"></item>

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"></item>

            </group>
        </menu>
    </item>

</menu>